cmake_minimum_required(VERSION 3.21.1)

project(sitk-superbuild)

add_subdirectory(SuperBuild)

ExternalProject_Add(${PROJECT_NAME}_core
  BINARY_DIR ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/bin
  DEPENDS
    SimpleITK
  SOURCE_DIR
    ${CMAKE_CURRENT_LIST_DIR}/src
  CMAKE_ARGS
    -DSimpleITK_DIR=${SimpleITK_DIR}
    -DITK_DIR=${ITK_DIR}
    -DCMAKE_C_STANDARD=${CMAKE_C_STANDARD}
    -DCMAKE_C_EXTENSIONS=${CMAKE_C_EXTENSIONS}
    -DCMAKE_C_STANDARD_REQUIRED=${CMAKE_C_STANDARD_REQUIRED}
  CMAKE_CACHE_ARGS
    -DCMAKE_C_FLAGS:STRING=${CMAKE_C_FLAGS}
    -DCMAKE_PREFIX_PATH:PATH=${CMAKE_PREFIX_PATH}
  BUILD_ALWAYS
    1
  INSTALL_COMMAND
    ""
  )
